{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 92,
  "lineage": "17e6705b-829d-12cf-d81d-c8845ad0f3ce",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.204.4.108",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-12-09T03:43:04.122-08:00",
            "id": "projects/test-automation-480110/regions/europe-west4/addresses/dev-openopteng-vm-ip-0090d0",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "dev-openopteng-vm-ip-0090d0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "test-automation-480110",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/regions/europe-west4/addresses/dev-openopteng-vm-ip-0090d0",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/test-automation-480110/zones/europe-west4-b/instances/dev-openopteng-vm-0090d0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8501",
                  "3000",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-09T03:43:36.526-08:00",
            "deny": [],
            "description": "Allow web traffic and Streamlit port",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-automation-480110/global/firewalls/dev-allow-http-0090d0",
            "log_config": [],
            "name": "dev-allow-http-0090d0",
            "network": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/networks/dev-openopteng-vpc-0090d0",
            "priority": 1000,
            "project": "test-automation-480110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/firewalls/dev-allow-http-0090d0",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "openopteng-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-09T03:43:36.495-08:00",
            "deny": [],
            "description": "Allow all internal traffic within subnet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-automation-480110/global/firewalls/dev-allow-internal-mid-0090d0",
            "log_config": [],
            "name": "dev-allow-internal-mid-0090d0",
            "network": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/networks/dev-openopteng-vpc-0090d0",
            "priority": 1000,
            "project": "test-automation-480110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/firewalls/dev-allow-internal-mid-0090d0",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "openopteng-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-09T03:43:36.449-08:00",
            "deny": [],
            "description": "Allow SSH from anywhere and IAP",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-automation-480110/global/firewalls/dev-allow-ssh-0090d0",
            "log_config": [],
            "name": "dev-allow-ssh-0090d0",
            "network": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/networks/dev-openopteng-vpc-0090d0",
            "priority": 1000,
            "project": "test-automation-480110",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/firewalls/dev-allow-ssh-0090d0",
            "source_ranges": [
              "0.0.0.0/0",
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "openopteng-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backtesting_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/zones/europe-west4-b/disks/dev-openopteng-vm-0090d0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "managed-by": "terraform",
              "purpose": "backtesting"
            },
            "enable_display": false,
            "id": "projects/test-automation-480110/zones/europe-west4-b/instances/dev-openopteng-vm-0090d0",
            "instance_id": "8035963300855788945",
            "label_fingerprint": "UbeOmJTiohw=",
            "labels": {
              "environment": "dev",
              "managed-by": "terraform",
              "purpose": "backtesting"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "TRUE",
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC/WUzk/xvID5r4OxTnmljaau/DauA5uDD6TQEB6LrMWtm7IaiwxWaFJJrWotnld8LpZgqZ+HzK+kRjU3YeTlkTgMmY4h8K2bBoZ76Hi0HwUur5RE/N6pJgaft0VOs1ppP+NW3rGNrsbQVTZJsx6so3RlTvS0ogniOKuzQW0ytgMOoVIpQJW+cyuwLt/27YHZUZIVscLxACjDedeku4vX3eiDUwOGJH6ypjqoBj+4eFYIiT/Ly0aFPvCfwj+j5/o5a7uIWXHNkbjGfrwYcN2zTfFKrnuwsPEzXIHs6A6cteTDZRMDITL2MmL2BbXUaO5ejn2a33Lg7kMBChvRcXpBfAoU8MPJHTpQdXZtoV6NbCdGp9JmgII6yMdd6xeiHU9qy/GUIXkO5191vzCU0y5NymNkPwREWF1aIBVhtvgh6roH [...]
            },
            "metadata_fingerprint": "lMHLpHSULfs=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update system\napt-get update\napt-get upgrade -y\n\n# Install Docker\ncurl -fsSL https://get.docker.com -o get-docker.sh\nsh get-docker.sh\nusermod -aG docker ubuntu\n\n# Install Docker Compose\ncurl -L \"https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\nchmod +x /usr/local/bin/docker-compose\n\n# Install useful tools\napt-get install -y git htop vim curl [...]
            "name": "dev-openopteng-vm-0090d0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.204.4.108",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/networks/dev-openopteng-vpc-0090d0",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/regions/europe-west4/subnetworks/dev-openopteng-subnet-0090d0",
                "subnetwork_project": "test-automation-480110"
              }
            ],
            "project": "test-automation-480110",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/zones/europe-west4-b/instances/dev-openopteng-vm-0090d0",
            "service_account": [
              {
                "email": "dev-openopteng-vm-sa-0090d0@test-automation-480110.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "openopteng-vm"
            ],
            "tags_fingerprint": "_MSeDDiDYQ4=",
            "terraform_labels": {
              "environment": "dev",
              "managed-by": "terraform",
              "purpose": "backtesting"
            },
            "zone": "europe-west4-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.vm_service_account",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/test-automation-480110/global/networks/dev-openopteng-vpc-0090d0",
            "mtu": 0,
            "name": "dev-openopteng-vpc-0090d0",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4883808659686405543",
            "project": "test-automation-480110",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/networks/dev-openopteng-vpc-0090d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-09T03:43:36.679-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/test-automation-480110/regions/europe-west4/subnetworks/dev-openopteng-subnet-0090d0",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "dev-openopteng-subnet-0090d0",
            "network": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/global/networks/dev-openopteng-vpc-0090d0",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test-automation-480110",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-automation-480110/regions/europe-west4/subnetworks/dev-openopteng-subnet-0090d0",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_id.suffix"
          ]
        }
      ]
    }
  ]
}